# PopDict

./: CMakeLists.txt  PKGBUILD  README.md  dictserver.cpp  dictserver.h  main.cpp  popupwindow.cpp
src/: main.cpp  popupwindow.h
